V1 Random neural network - tout passer en tableau